[package]
name = "richter"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]

[dependencies]
"bitflags" = "1.0.1"
"byteorder" = "1.2.1"
"cgmath" = "0.16.0"
"chrono" = "0.4.0"
"combine" = "3.5.1"
"env_logger" = "0.5.3"
"failure" = "0.1.1"
"flame" = "0.2.0"
"nom" = "3.2.1"
"num" = "0.1.42"
"num-derive" = "0.1.42"
"lazy_static" = "1.0.0"
"log" = "0.4.1"
"rand" = "0.4.2"
"regex" = "0.2.6"
"rodio" = "0.6.0"

# gfx pre-ll deps
#
# these break easily, especially with incompatibilities between the versions of glutin and winit.
# check crates.io before changing them.
"gfx" = "~0.17"
"gfx_device_gl" = "~0.15"
"gfx_window_glutin" = "~0.21"
"glutin" = "~0.13"
"winit" = "~0.11"

# binaries only
"docopt" = "0.8"
"serde" = "1.0"
"serde_derive" = "1.0"