[package]
name = "richter"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
bitflags = "1.0.1"
bumpalo = "3.4"
byteorder = "1.3"
cgmath = "0.17.0"
chrono = "0.4.0"
env_logger = "0.5.3"
failure = "0.1.8"
futures = "0.3.5"
lazy_static = "1.0.0"
log = "0.4.1"
nom = "5.1"
num = "0.1.42"
num-derive = "0.1.42"
png = "0.16"
rand = { version = "0.7", features = ["small_rng"] }
regex = "0.2.6"
# rodio = "0.12"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "82b4952" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaderc = "0.6.2"
slab = "0.4"
structopt = "0.3.12"
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror = "1.0"
wgpu = "0.6.0"

# "winit" = "0.22.2"
# necessary until winit/#1524 is merged
winit = { git = "https://github.com/chemicstry/winit", branch = "optional_drag_and_drop" }
